updated after uta

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                         Experienced Android Developer with a demonstrated history of working in the information technology and services industry. Skilled in Android, Node JS, SQL, and PHP. Strong engineering professional with a Bachelor of Engineering (BE) focused in Computer Science from Government Engineering College Patan..
+                         Self-motivated Web Developer with high level of experience working on multiple projects. Passionate and hardworking with penchant for meeting deadlines. Interested in role with company promoting best practices and offering diverse customer projects.Self-motivated Web Developer with high level of experience working on multiple projects. Passionate and hardworking with penchant for meeting deadlines. Interested in role with company promoting best practices and offering diverse customer projects.
                     </p>
                 </div>
             </div>
@@ -90,6 +90,13 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
+        	<div data-date="June 2019 - May 2020">
+                <h3>The University Of Texas At Arlington</h3>
+                <h4>Student Web Developer</h4>
+                <p>
+                    Helped Restructure & Redesigning of University Website using sitecore - CMS, JavaScript and React.js by effectively reducing the redundancy of web pages to 30%.
+                </p>
+            </div>
             <div data-date="May 2018 - August 2018">
                 <h3>Third Rock Techkno</h3>
                 <h4>Full Stack Developer</h4>
@@ -252,8 +259,11 @@
                               </ul>
                         <a href="jeopardy.pdf">Project Proposal</a>
                         <br>
-                        <a href="http://murmuring-fortress-10403.herokuapp.com">Working Demo</a>
+                        <a href="http://sagarchandani.ml:3000/">Working Demo</a>
                         <br>
+
+                        <a href="http://blog.sagarchandani.uta.cloud">Blog</a>
+                         <br>
                         <a href="https://github.com/sagar-chandani/jeopardy/blob/master/README.md">Report</a>
 
                     </div>
@@ -269,14 +279,25 @@
         <h2 class="heading">Skills</h2>
         <ul>
             <li>JavaScript</li>
-            <li>Python</li>
-            <li>Node.js</li>
+			<li>JQuery</li>
+			<li>CSS</li>
+			<li>XML</li>
+			<li>D3</li>
+			<li>WebPack</li>
+			<li>NPM</li>
+			<li>Babel</li>
+			<li>Node.js</li>
             <li>React</li>
+            <li>Python</li>
             <li>LATEX</li>
             <li>Java</li>
             <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
+			<li>SQL</li>
+			<li>PHP</li>
+			<li>GitHub</li>
+			<li>Bootstrap</li>
+			<li>Bitbucket</li>
+
         </ul>
     </div>
     <!-- End #skills -->
