Changes in Resume

--- a/index.html
+++ b/index.html
@@ -93,32 +93,113 @@
         	<div data-date="June 2019 - May 2020">
                 <h3>The University Of Texas At Arlington</h3>
                 <h4>Student Web Developer</h4>
-                <p>
-                    Helped Restructure & Redesigning of University Website using sitecore - CMS, JavaScript and React.js by effectively reducing the redundancy of web pages to 30%.
-                </p>
+                 <ul >
+				    <li >
+				      <p>
+				      	Restructured and Redesigned website to reduce the redundancy by 30%
+				      </p>
+				    </li>
+				    <li >
+				      <p>
+				     	Collaborated with Departments, representing web team to establish project goals, projections, and milestones.
+				      </p>
+				    </li>
+				   <li >
+				      <p>
+				      	Conceived and built optimized landing pages in HTML and CSS, including Javascript Library integration and cross-browser compatibility, to support responsiveness.
+				      </p>
+				    </li>
+				    <li >
+				      <p>
+				      	Multi-tasked across multiple focuses to generate project results and meet deadlines and organizational expectations.
+				      </p>
+				    </li>
+				  </ul>
             </div>
             <div data-date="May 2018 - August 2018">
                 <h3>Third Rock Techkno</h3>
                 <h4>Full Stack Developer</h4>
-                <p>
-                    Learned Project Management skills at Industry level. Used Tools like React.js , MongoDB and Node.js, Bitbucket, Git, AWS Mulpart Data Upload, CI / CD, etc. Helped pioneer automated deployments of data pipelines using CI / CD, enabling faster and more portable deployments. Conducted interviews for junior fullstack Developer Roles
-                </p>
+                <ul >
+				    <li >
+				      <p>
+				      	Made a Chrome Extension to annotate images and videos to be shared or saved on different mediums like Google drive, Dropbox, Slack, and Jira using React.js, Node.js, MongoDB, and Bitbucket.
+				      </p>
+				    </li>
+				    <li >
+				      <p>
+				     	Implemented services like AWS S3, Multipart upload, Oauth, REST API, CI/CD, using Scrum Development approach
+				      </p>
+				    </li>
+				   <li >
+				      <p>
+				      	Helped peers to debug code and improved coding standard by including comments, helper methods and documentations  
+				      </p>
+				    </li>
+				    <li >
+				      <p>
+				      	Planned and engineered RESTful web services to manipulate dynamic datasets on AWS S3
+				      </p>
+				    </li>
+				    <li >
+				      <p>
+				      	Oversaw web platform testing, troubleshooting, and user sampling prior to live deployment.
+				      </p>
+				    </li>
+				  </ul>
             </div>
 
             <div data-date="Dec 2017 - February 2018">
                 <h3>Hasura</h3>
                 <h4>React Native Intern</h4>
-                <p>
-                   In a team of 3, Learned building Cross Platform Application and deploying it on Kubernetes provided by Hasura. Experienced how team works to complete a particular task in a given deadline using GIT version control.
-                </p>
+                <ul >
+				    <li >
+				      <p>
+				      	Created a Cross-Platform React Native Mobile Application by using Mapbox to let users see the distance and the steps visually.
+				      </p>
+				    </li>
+				    <li >
+				      <p>
+				     	Used APIs made in Python-Flask made by a teammate in the application to get the data from Mapbox
+				      </p>
+				    </li>
+				   <li >
+				      <p>
+				      	Successfully deployed the Application on Kubernetes working with 3 interns by using Agile Development
+				      </p>
+				    </li>
+				    <li >
+				      <p>
+				      	Implemented a Development journal chronicling the details of every step.
+				      </p>
+				    </li>
+				  </ul>
             </div>
 
             <div data-date="September 2015 – September 2016">
                 <h3>QuadMagnus</h3>
                 <h4>Android Intern</h4>
-                <p>
-                   Gained Experienced in making Android mobile applications on a professional level. Responsibilities to complete tasks for Live Projects. Analysed the requirements of clients and coordinated with the project team for the development.
-                </p>
+                <ul >
+				    <li >
+				      <p>
+				      	Worked with teams from other projects and departments to create apps and data-driven by customer input using SDLC
+				      </p>
+				    </li>
+				    <li >
+				      <p>
+				     	Designed user interfaces that engaged multiple senses and produced immersive experiences.
+				      </p>
+				    </li>
+				   <li >
+				      <p>
+				      	Prepared detailed reports on updates to project specifications, progress, identified conflicts and team activities.
+				      </p>
+				    </li>
+				    <li >
+				      <p>
+				      	Collaborated with cross-functional development team members to analyze potential system solutions based on evolving client requirements.
+				      </p>
+				    </li>
+				  </ul>
             </div>
         </div>
     </div>
@@ -131,7 +212,7 @@
             <span class="education-date">Aug 2018 - May -2020</span>
             <h4>Masters of Science in Computer Science</h4>
             <p>
-                Majoring in Software Engineering and Database, I am learning new Technologies in a very pragmatic way. Working with the Oncampus Organizations like Mavnet, Mobi, IDC and SASE has given a very good experience for Team work as well as Problem Solving.
+                Specializing in Software Engineering and Database, I am learning new Technologies in a very pragmatic way. Working with the Oncampus Organizations like Mavnet, Mobi, IDC and SASE has given a very good experience for Team work as well as Problem Solving.
             </p>
         </div>
         <!-- End .education-block -->
@@ -157,10 +238,67 @@
         <h2 class="heading">Projects</h2>
         <div class="container">
             <div class="row">
+            	<div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/project5.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Jeopardy (Recommender System)</h3>
+                        <ul >
+                                <li >
+                                  <p>
+                                    Life is all about Questions and Answers. A Recommendor System for improving knowledge.
+                                  </p>
+                                </li>
+                                <li >
+                                  <p>
+                                  	User will get Questions for the keyword one searches.
+                                  </p>
+                                </li>
+                              </ul>
+                        <a href="jeopardy.pdf">Project Proposal</a>
+                        <br>
+                        <a href="http://sagarchandani.ml:3000/">Working Demo</a>
+                        <br>
+
+                        <a href="http://blog.sagarchandani.uta.cloud">Blog</a>
+                         <br>
+                        <a href="https://github.com/sagar-chandani/jeopardy/blob/master/README.md">Report</a>
+
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/project4.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Directions Mapbox</h3>
+                        <ul >
+							    <li >
+							      <p>
+							      	Developed a React Native Cross Platform application using Mapbox API
+							      </p>
+							    </li>
+							    <li >
+							      <p>
+							      Let user choose Source and Destination and show Directions and Travel Time using Google Maps interface.
+							      </p>
+							    </li>
+							  </ul>
+                        <!-- <a href="#">View Project</a> -->
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
                 <div class="project shadow-large">
                     <div class="project-image">
                         <img src="images/project2.jpg" />
                     </div>
+
 
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -213,63 +351,8 @@
                 </div>
                 <!-- End .project -->
 
-                <div class="project shadow-large">
-                    <div class="project-image">
-                        <img src="images/project4.jpg" />
-                    </div>
-                    <!-- End .project-image -->
-                    <div class="project-info">
-                        <h3>Directions Mapbox</h3>
-                        <ul >
-							    <li >
-							      <p>
-							      	Developed a React Native Cross Platform application using Mapbox API
-							      </p>
-							    </li>
-							    <li >
-							      <p>
-							      Let user choose Source and Destination and show Directions and Travel Time using Google Maps interface.
-							      </p>
-							    </li>
-							  </ul>
-                        <!-- <a href="#">View Project</a> -->
-                    </div>
-                    <!-- End .project-info -->
-                </div>
-                <!-- End .project -->
+                
 
-                 <div class="project shadow-large">
-                    <div class="project-image">
-                        <img src="images/project5.jpg" />
-                    </div>
-                    <!-- End .project-image -->
-                    <div class="project-info">
-                        <h3>Jeopardy (Recommender System)</h3>
-                        <ul >
-                                <li >
-                                  <p>
-                                    Life is all about Questions and Answers. A Recommendor System for improving knowledge.
-                                  </p>
-                                </li>
-                                <li >
-                                  <p>
-                                  User will get Questions for the keyword one searches.
-                                  </p>
-                                </li>
-                              </ul>
-                        <a href="jeopardy.pdf">Project Proposal</a>
-                        <br>
-                        <a href="http://sagarchandani.ml:3000/">Working Demo</a>
-                        <br>
-
-                        <a href="http://blog.sagarchandani.uta.cloud">Blog</a>
-                         <br>
-                        <a href="https://github.com/sagar-chandani/jeopardy/blob/master/README.md">Report</a>
-
-                    </div>
-                    <!-- End .project-info -->
-                </div>
-                <!-- End .project -->
             </div>
         </div>
     </div>
@@ -297,7 +380,8 @@
 			<li>GitHub</li>
 			<li>Bootstrap</li>
 			<li>Bitbucket</li>
-
+			<li>Wireshark</li>
+			<li>GIMP</li>
         </ul>
     </div>
     <!-- End #skills -->
